--- a/config/locales/pl.yml
+++ b/config/locales/pl.yml
@@ -63,3 +63,18 @@ pl:
   ### QUERY
   field_jenkins_job: Zadanie
   field_jenkins_build: Test
+
+  use_cases:
+    jenkins_job:
+      create_builds:
+        success: "Job '%{jenkins_job}' builds successfully created"
+        failed: "Errors while creating builds for job '%{jenkins_job}' : %{errors}"
+      trigger_build:
+        success: "Job '%{jenkins_job}' successfully started"
+        failed: "Errors while starting job '%{jenkins_job}' : %{errors}"
+      update_all_builds:
+        success: "Job '%{jenkins_job}' builds successfully updated"
+        failed: "Errors while updating job '%{jenkins_job}' builds : %{errors}"
+      update_last_build:
+        success: "Job '%{jenkins_job}' last build successfully updated"
+        failed: "Errors while updating job '%{jenkins_job}' last build : %{errors}"
